Support enum constants.